# pytest-terraform

./: .codecov.yml  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
pytest_terraform/: __init__.py  exceptions.py  hooks.py  lock.py  options.py  plugin.py  tf.py  xdist.py
tests/: burnify.tfstate  test_lock.py  test_options.py  test_terraform.py  test_tf_fixture.py
tests/data/mrofarret/local_baz/: baz.tf  tf_resources.json
tests/terraform/aws_sns/: tf_resources.json  topic.tf
tests/terraform/aws_sqs/: queue.tf  tf_resources.json
tests/terraform/local_bar/: bar.tf  tf_resources.json
tests/terraform/local_buz/: .terraform.lock.hcl  buz.tf  tf_resources.json
tests/terraform/local_foo/: foo.tf  tf_resources.json
