[tool.poetry]
name = "pytest-terraform"
version = "0.1.0"
description = "A pytest plugin for using terraform fixtures"
authors = ["Kapil Thangavelu <kapilt@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/cloud-custodian/pytest-terraform"
classifiers=[
   "Topic :: Software Development :: Testing",
   "Topic :: System :: Systems Administration",
   "Topic :: System :: Distributed Computing"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
pytest = "~5.3.5"

[tool.poetry.dev-dependencies]
mkdocs = "^1.1"
pytest-xdist = "^1.31.0"


[tool.poetry.plugins.pytest11]
terraform = "pytest_terraform.plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

