[tool.poetry]
name = "pytest-terraform"
version = "0.4.0"
description = "A pytest plugin for using terraform fixtures"
authors = ["Kapil Thangavelu <kapilt@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/cloud-custodian/pytest-terraform"
classifiers=[
   "Topic :: Software Development :: Testing",
   "Topic :: System :: Systems Administration",
   "Topic :: System :: Distributed Computing"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
pytest = "~6.0.0"
jmespath = "^0.10.0"
portalocker = "^1.7.0"

[tool.poetry.dev-dependencies]
mkdocs = "^1.1"
pytest-xdist = ">= 1.31.0"
black = "^19.10b0"
isort = "^4.3.21"
flake8 = "^3.7.9"
coverage = "^5.1"
pytest-cov = "^2.8.1"
pre-commit = "^2.1.1"

[tool.poetry.plugins.pytest11]
terraform = "pytest_terraform.plugin"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
norecursedirs = ["data", "terraform"]

[tool.isort]
line_length = 90
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
not_skip = "__init__.py"
skip_glob = ["*/setup.py", "*tf", "*md"]
filter_files = true

known_first_party = "poetry"

[tool.black]
line-length = 90
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
