[tool.poetry]
name = "pytest-terraform"
version = "0.7.0"
description = "A pytest plugin for using terraform fixtures"
authors = ["Kapil Thangavelu <kapilt@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/cloud-custodian/pytest-terraform"
classifiers=[
   "Topic :: Software Development :: Testing",
   "Topic :: System :: Systems Administration",
   "Topic :: System :: Distributed Computing"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pytest = ">= 6.0"
jmespath = ">= 0.10.0"
portalocker = ">= 1.7.0"
pytest-xdist = ">= 1.31.0"

[tool.poetry.plugins.pytest11]
terraform = "pytest_terraform.plugin"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.4.4"
pytest-cov = ">=2.8.1"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
norecursedirs = ["data", "terraform"]

[tool.ruff]
line-length = 90

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
